--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -538,5 +538,158 @@ height: 18px;
     padding-top: 100px;
     padding-bottom: 100px;
     position: relative;
+    background-color: white;
 }
+
+.features .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 40px;
+}
+
+.features .container .box{
+    text-align: center;
+    border: 1px solid #CCC;
+    overflow: hidden;
+}
+.features .container .box .image
+{
+    position: relative;
+}
+.features .container .box .image::before
+{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+
+}
+.features .container .box .image::after
+{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-style: solid;
+    border-width: 0px 0px 170px 500px;
+    border-color: transparent transparent white transparent;
+    transition: 0.3s;
+}
+.features .container .box:hover  .image::after{
+    border-width: 170px 500px 170px 0px;
+}
+.features .container .box .image{
+
+}
+
+.features .container .box .image img{
+    max-width: 100%;
+    width: 100%;
+}
+
+
+.features .container .box .content h1{
+    position: relative;
+    font-size: 40px;
+    margin: auto;
+    width: fit-content;
+}
+
+.features .container .box .content h1::after{
+    content: "";
+    position: absolute;
+    left: 15px;
+    bottom: -20px;
+    width: calc(100% - 30px);
+    height: 5px;
+    background-color: transparent;
+}
+
+.features .container .box .content p{
+    line-height: 2;
+    font-size: 20px;
+    margin: 30px 0;
+    padding: 25px;
+    color: #777;
+}
+
+.features .container .box .content a{
+    display: block;
+    border: 3px solid transparent;
+    border-radius: 6px;
+    width: fit-content;
+    margin: 0 auto 30px;
+    padding: 10px 30px;
+    font-weight: bold;
+    font-size: 22px;
+    transition: 0.3S;
+}
+
+
+
+.features .container .quality .image::before
+{
+    background-color: rgb(244 64 54 / 60%);
+}
+
+.features .container .quality .content h1::after
+{
+    color: #f44036;
+}
+
+.features .container .quality .content a
+{
+    color: #f44036;
+    border-color: #f44036;
+    background: linear-gradient(to right,#f44036 50%,white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+.features .container .box:hover .content a{
+    background-position: left bottom;
+    color: white;
+}
+
+
+.features .container .time .image::before {
+    background-color: rgb(0 150 136 / 60%);
+  }
+  .features .container .time .content h1::after {
+    background-color: #009688;
+  }
+  .features .container .time .content a {
+    color: #009688;
+    border-color: #009688;
+    background: linear-gradient(to right, #009688 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+  }
+  .features .container .passion .image::before {
+    background-color: rgb(3 169 244 / 60%);
+  }
+  .features .container .passion .content h1::after {
+    background-color: #03a9f4;
+  }
+  .features .container .passion .content a {
+    color: #03a9f4;
+    border-color: #03a9f4;
+    background: linear-gradient(to right, #03a9f4 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+  }
+  .features .container .box:hover .content a {
+    background-position: left bottom;
+    color: white;
+  }
 /* End features */
+
+/* start Testimonials */
+.Testimonials{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    position: relative;
+}
+
+/* End Testimonials */
