--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -690,6 +690,47 @@ height: 18px;
     padding-top: 100px;
     padding-bottom: 100px;
     position: relative;
+    background-color: #ececec;
 }
 
+.Testimonials .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 30px;
+}
+
+.Testimonials .container .box{
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0px 2px 4px rgb(0, 0, 0 / 7%);
+    border-radius: 6px;
+    position: relative;
+}
+.Testimonials .container .box img{
+    position: absolute;
+    right: -10px;
+    top: -50px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 10px solid #ececec;
+}
+.Testimonials .container .box h3{
+    margin: 0px ;
+}
+
+.Testimonials .container .box .title{
+    color: #777;
+    margin-bottom: 10px;
+    display: block;
+}
+.Testimonials .container .box .rate .filled{
+    color: #ffc107;
+}
+.Testimonials .container .box p{
+    color: #777;
+    line-height: 1.5;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
 /* End Testimonials */
