--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -758,7 +758,7 @@ height: 18px;
     background-color: #f3f3f3;
     right: 0;
     top: 0;
-    border-radius: 10px; 
+    border-radius: 10px;
 }
 .teams .container .box::before{
     z-index: -2;
@@ -826,3 +826,91 @@ height: 18px;
     margin-bottom: 25px;
 }
 /* End TEAM MEMBERS */
+
+/* start services */
+.services{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    position: relative;
+    background-color: #ececec;
+}
+
+.services .container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    gap: 30px;
+}
+.services .container .box{
+    background-color: white;
+    box-shadow: 0px 12px 20px 0 rgb(0 0 0 / 13%), 0px 2px 4px 0 rgb(0 0 0 / 12%);
+    counter-increment: services;
+    position: relative;
+    transition: 0.3s;
+}
+.services .container .box::before{
+    content: "";
+    left: 50%;
+    transform: translateX(-50%);
+    height: 3px;
+    top: -3px;
+    position: absolute;
+    background-color: var(--main-color);
+    width: 0;
+    transition: 0.3s;
+}
+.services .container .box:hover{
+    transform: translateY(-10px);
+}
+.services .container .box:hover::before{
+    width: 100%;
+}
+
+.services .container .box >i{
+    margin: 30px auto 20px;
+    display: block;
+    text-align: center;
+    color: #d5d5d5;
+}
+.services .container .box >h3{
+    margin: 20px 0 40px;
+    text-align: center;
+    font-size: 25px;
+    color: var(--main-color);
+}
+.services .container .box .info{
+    padding: 15px;
+    text-align: right;
+    background-color: #F9F9F9;
+    position: relative;
+}
+.services .container .box .info{
+    color: var(--main-color);
+}
+.services .container .box .info::before{
+    content: "0" counter(services);
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 80px;
+    background-color: var(--main-color);
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-right: 18px;
+
+}
+.services .container .box .info::after{
+    content: "";
+    position: absolute;
+    background-color: #D5D5D5;
+    top: 0;
+    left: 80px;
+    width: 50px;
+    height: calc(100% + 0.4px);
+    transform: skewX(-30deg);
+}
+/* End services */
