--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -1004,3 +1004,17 @@ height: 18px;
     font-size: 17px;
 }
 /* End how it work  */
+
+/* start event */
+.event{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.container{
+
+}
+.container img{
+
+}
+
+/* End event */
